--- a/style.css
+++ b/style.css
@@ -940,6 +940,13 @@ p a:hover{
         padding-left: 25px;
         line-height: 0;
     }
+    .desco2 .descover2{
+        font-size: 10px;
+        font-weight: 600;
+        padding-bottom: 6px;
+        padding-left: 25px;
+        line-height: 0;
+    }
     
 }
 
@@ -967,10 +974,30 @@ p a:hover{
     padding-left: 0px;
     text-align: left;
 }
+.desco2{
+    color: #4D4D4D;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 22px;
+    padding-top: 10px;
+    padding-bottom: 0px;
+    display: block;
+    padding-left: 0px;
+    text-align: left;
+}
+
+
 
 .descover{
     border-radius: 10px 10px 0px 0px;
     background: #4D4D4D;
+    padding: 5px 25px 5px 25px;
+    color: #fff;
+    cursor: default;
+}
+.descover2{
+    border-radius: 10px 10px 0px 0px;
+    background: #c7417b;
     padding: 5px 25px 5px 25px;
     color: #fff;
     cursor: default;
@@ -3140,6 +3167,79 @@ p a:hover{
     }
     
     .ramp1 iframe{
+        width: 300px;
+        height: 200px;
+    }
+}
+
+
+
+
+
+.ramp2{
+    background-color: rgba(250,250,250,0.9);
+    border-radius: 1px 10px 10px 10px;
+    border: 1px solid #4D4D4D;
+    display: grid;
+    padding: 50px 122px;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s;
+}
+.ramp2 img{
+    background-color: rgba(250,250,250,0.9);
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s;
+}
+.ramp2 iframe{
+    display: block;
+    width: 945px;
+    height: 600px;
+    border-radius: 1px 10px 10px 10px;
+    transition: all 0.3s;
+}
+
+
+@media (max-width:1700px){
+    
+    
+    
+    .ramp2 img{
+        width: 700px;
+        height: auto;
+    }
+    
+    .ramp2 iframe{
+        width: 700px;
+        height: 450px;
+    }
+}
+
+@media (max-width:1350px){
+    
+    
+    .ramp2 img{
+        width:500px;
+        height: auto;
+    }
+    
+    .ramp2 iframe{
+        width: 500px;
+        height: 350px;
+    }
+}
+
+@media (max-width:800px){
+    
+    
+    .ramp2 img{
+        width: 300px;
+        height: auto;
+    }
+    
+    .ramp2 iframe{
         width: 300px;
         height: 200px;
     }
