--- a/style.css
+++ b/style.css
@@ -96,7 +96,9 @@
             text-decoration: none;
             color: #FAFAFA;
             border-radius: 5px 0px 0px 5px;
-            border: 1px solid #4D4D4D;
+            border-left: 1px solid #4D4D4D;
+            border-top: 1px solid #4D4D4D;
+            border-bottom: 1px solid #4D4D4D;
             padding: 0 10px 0 10px;
             font-size: 13px;
             font-weight: 550;
@@ -106,8 +108,6 @@
         }
         .english .btntrans1:hover{
             color: #FAFAFA;
-            border: 1px solid #4D4D4D;
-            border-radius: 5px 0px 0px 5px;
             background: #4D4D4D;
 
         }
@@ -116,7 +116,9 @@
             text-decoration: none;
             color: #4D4D4D;
             border-radius: 0px 5px 5px 0px;
-            border: 1px solid #FAFAFA;
+            border-right: 1px solid #4D4D4D;
+            border-top: 1px solid #4D4D4D;
+            border-bottom: 1px solid #4D4D4D;
             padding: 0 10px 0 10px;
             font-size: 13px;
             font-weight: 550;
@@ -126,8 +128,6 @@
         }
         .english .btntrans2:hover{
             color: #FAFAFA;
-            border: 1px solid #BEBEBE;
-            border-radius: 0px 5px 5px 0px;
             background: #BEBEBE;
 
         }
@@ -147,7 +147,9 @@
             text-decoration: none;
             color: #4D4D4D;
             border-radius: 5px 0px 0px 5px;
-            border: 1px solid #FAFAFA;
+            border-left: 1px solid #4D4D4D;
+            border-top: 1px solid #4D4D4D;
+            border-bottom: 1px solid #4D4D4D;
             padding: 0 10px 0 10px;
             font-size: 13px;
             font-weight: 550;
@@ -157,17 +159,16 @@
         }
         .bahasa .btntrans1:hover{
             color: #FAFAFA;
-            border: 1px solid #BEBEBE;
-            border-radius: 5px 0px 0px 5px;
             background: #BEBEBE;
-
         }
 
         .bahasa .btntrans2{
             text-decoration: none;
             color: #FAFAFA;
             border-radius: 0px 5px 5px 0px;
-             border: 1px solid #4D4D4D;
+            border-right: 1px solid #4D4D4D;
+            border-top: 1px solid #4D4D4D;
+            border-bottom: 1px solid #4D4D4D;
             padding: 0 10px 0 10px;
             font-size: 13px;
             font-weight: 550;
@@ -177,11 +178,29 @@
         }
         .bahasa .btntrans2:hover{
             color: #FAFAFA;
-            border: 1px solid #4D4D4D;
-            border-radius: 0px 5px 5px 0px;
             background: #4D4D4D;
-
         }
+
+
+.transBTN{
+    padding-left: 30px;
+}
+
+.tbtn{
+    justify-content: space-between;
+    align-content: space-between;
+    display: flex;
+}
+
+@media (max-width:800px){
+    .transBTN{
+        display:inline-block;
+        position:absolute;
+        right: 70px;
+        padding-top: 10px;
+    }
+}
+
 
 /*PAGE BREAK*/
 
@@ -260,7 +279,7 @@ nav .fa{
 
 @media (max-width: 800px){
     nav{
-        padding: 1.5% 6%;
+        padding: 3.5% 6%;
     }
     .logots{
         margin-top: 10px;
@@ -1550,6 +1569,7 @@ p a:hover{
         left: 0;
         padding-left: 20px;
         display: inline-block;
+        padding-top: 10px;
     }
 }
 
@@ -4299,24 +4319,6 @@ p a:hover{
     }
 }
 
-
-
-
-.transBTN{
-    padding-left: 30px;
-}
-
-.tbtn{
-    border-radius: 6px;
-     border: 1px solid #4D4D4D;
-    background-color: #4D4D4D;
-}
-
-.transBTN ul li{
-    list-style: none;
-    display:inline-flex;
-}
-
 .seriescard ul li{
     list-style: none;
     display:inline-flex;
@@ -4352,14 +4354,7 @@ p a:hover{
 
 
 
-@media (max-width:800px){
-    .transBTN{
-        display:inline-block;
-        position:absolute;
-        top: 15px;
-        right: 70px;
-    }
-}
+
 
 
 
