--- a/style.css
+++ b/style.css
@@ -309,6 +309,41 @@ nav .fa{
     font-weight: 550;
 }
 
+.nav-links2{
+    flex: 1;
+    text-align: right;
+}
+.nav-links2 ul li{
+    list-style: none;
+    display: inline-block;
+    padding-left: 30px;
+    position: relative;
+}
+.nav-links2 ul li a{
+    text-decoration: none;
+    color: #4D4D4D;
+    font-size: 13px;
+    font-weight: 550; 
+}
+.nav-links2 ul li a::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #4D4D4D;
+    display: block;
+    margin-left: 0%;
+    transition: 0.5s;
+}
+
+.nav-links2 ul li a:hover::after{
+    width: 100%;
+}
+
+.nav-links2 .logodlm2 img{
+    width: 125px;
+    display: none;
+}
+
 
 @media (max-width: 800px){
     nav{
@@ -398,6 +433,53 @@ nav .fa{
         padding-bottom: 20px;
         text-align: center;
         border-bottom: 0;
+    }
+    
+    
+    .nav-links2 ul{
+        position: absolute;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        padding-bottom: 70px;
+        justify-content: center;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .nav-links2 ul li{
+        display: flex;
+        border-bottom: 1px solid #4D4D4D;
+        padding-top: 30px;
+        padding-left: 8px;
+        padding-bottom: 12px;
+    }
+    .nav-links2 ul li a{
+        padding-right: 100%;
+    }
+    .nav-links2{
+        position: fixed;
+        background: #FAFAFA;
+        height: 100vh;
+        width: 100%;
+        top: 0;
+        right: -100%;
+        text-align: left;
+        z-index: 2;
+        transition: 1.2s cubic-bezier(.165,.84,.44,1) .3s;
+        /*box-shadow: 0 0 20px 0px rgba(77,77,77,0.1);*/
+    }
+    nav .nav-links2 .closeMenu2{
+        display: block;
+        position: absolute;
+        top: 17px;
+        right: 20px;
+    }
+    .nav-links2 .logodlm2 img{
+        /*display: block;*/
+        display: none;
+        position: absolute;
+        top: 20px;
+        left: 20px;
     }
     
 }
